--- a/src/blocks/main/_main.html
+++ b/src/blocks/main/_main.html
@@ -92,7 +92,7 @@
     <div class="main__bottom_wrap">
       <div class="main__bottom_inner">
         <div class="main__title_wrap video-title_wrap dflex_w">
-          <div class="video-title__title">
+          <div class="video-title__title dflex">
             <h2>Видео о нас</h2>
           </div>
           <div class="video-title__nav nav-btns_wrap dflex_w">
